# flagbattle

./: Cargo.toml
client/: .env.example  Cargo.toml  README.md  index.html  package-lock.json  package.json  run.sh  tsconfig.json
client/src/: lib.rs  main.rs  store.tsx
client/src/app/: layout.tsx  page.tsx
client/src/app/game/: page.tsx
client/src/components/: Controller.tsx  DebugPanel.tsx  Game.tsx  GameState.tsx  Renderer.tsx  WebsocketManager.tsx
game/: Cargo.toml  README.md  combine.sh  index.ts
game/bindings/: Flag.ts  GameMessage.ts  Input.ts  Item.ts  Melee.ts  Metadata.ts  Player.ts  PlayerAssigned.ts  Radius.ts  Snapshot.ts  Team.ts  Velocity.ts  index.ts
game/src/: bin.rs  lib.rs  public.rs
server/: Cargo.toml
server/src/: main.rs  websocket.rs
