[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "client-bin"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
]}
wasm-bindgen-futures = "0.4.39"
futures-util = "0.3.30"
macroquad = "0.4.14"
quad-net = "0.1.2"
game = { path = "../game" }
