[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
name = "game"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/bin.rs"

[dependencies]
hecs = {version = "0.10.5", features = ["serde"]}
rkyv = {version = "=0.8.10", features = ["bytecheck", "alloc"]} # MUST BE THE SAME AS SERVER Cargo.toml

