[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
name = "game"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/bin.rs"

[dependencies]
hecs = {version = "0.10.5", features = ["serde"]}

# SHOULD BE SAME
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
ts-rs = "10.1.0"

