[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.44.2", features = ["full"] }
futures-util = "0.3.31"
game = { path = "../game" }

# SHOULD BE SAME
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
